# enigma-machine

./: .gitignore  CMakeLists.txt  README.md  asset-manifest.json  enigma_core.js  enigma_core.wasm  index.html  manifest.json
core/: enigma.h  main.c
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
static/css/: main.15ac7aa4.css  main.15ac7aa4.css.map  main.48f29a80.css  main.48f29a80.css.map  main.4ff6c454.css  main.4ff6c454.css.map
static/js/: 453.a9ded907.chunk.js  453.a9ded907.chunk.js.map  main.1b976184.js  main.1b976184.js.map  main.d031a226.js  main.d031a226.js.map  main.eb9082d5.js  main.eb9082d5.js.map
